[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "JaxTS"
version = "0.0.2"
authors = [
  { name="Michael Ellis", email="michael@mlellis.com" },
]
description = "A Jax based python package for Time Series"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"GitHub" = "https://github.com/michaelellis003/JaxTS"
