[tool.poetry]
name = "JaxTS"
version = "0.0.1"
description = "A Jax based python package for time series"
authors = ["Michael Ellis <michael@mlellis.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/michaelellis003/JaxTS"
keywords = ["Time Series", "State Space Models", "Dymanic Linear Models"]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
